Sync with trunk to revision 556817.